# LLMOps-Medical-Chatbot

./: Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
app/: README.md  application.py
app/common/: README.md
app/components/: README.md  data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: README.md  config.py
app/static/: README.md  style.css
app/templates/: README.md  index.html
custom_jenkins/: Dockerfile
